<resources>
    <string name="app_name">Against the Horde</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_landing">LandingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Deck Picker Intro-->
    <string name="introduction">Introduction</string>

    <string name="access_rules_title">Never played the horde format?</string>
    <string name="access_rules_info">The horde is a cooperative format where player teams up against a self played deck. Check out Rules from the menu to learn the format.</string>

    <string name="how_to_play_title">Before starting your first game</string>
    <string name="how_to_play_info">If you haven\'t used the app before, check out How To Play from the menu to learn about the app.</string>


</resources>